--- a/i3/config
+++ b/i3/config
@@ -16,6 +16,10 @@ gaps inner 15
 gaps outer 0
 
 # Colors
+
+#set_from_resource $wal-fg i3wm.color7 #f0f0f0
+set_from_resource $wal-bg i3wm.color2 #f0f0f0
+
 set $bg-color 	         #007ec0
 set $inactive-bg-color   #002b36
 set $text-color          #ffffff
@@ -269,10 +273,12 @@ mode "resize" {
 
 # window colors
 # type                  border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #90a0ff
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color  #90a0ff
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color  #90a0ff
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #90a0ff
+client.focused          $wal-bg            $wal-bg             $wal-fg              #90a0ff
+client.unfocused        $inactive-bg-color $inactive-bg-color  $inactive-text-color #90a0ff
+client.focused_inactive $inactive-bg-color $inactive-bg-color  $inactive-text-color #90a0ff
+client.urgent           $urgent-bg-color   $urgent-bg-color    $wal-fg              #90a0ff
+
+client.background       $wal-bg
 
 #
 # BAR (polybar, bumblebee-status, i3status...)
