--- a/polybar/config
+++ b/polybar/config
@@ -83,7 +83,8 @@ cursor-scroll = ns-resize
 [bar/bar-hidpi]
 inherit = bar/bar-fhd
 height = 65
-border-size = 6
+line-size = 8
+border-size = 8
 font-0 = Sans-Regular:size=18;0
 font-1 = "Font Awesome:style=Regular:size=16;1"
 font-2 = "Font Awesome 5 Free:style=Regular:size=16;2"
