--- a/polybar/config
+++ b/polybar/config
@@ -27,7 +27,7 @@ secondary = ${xrdb:color2:#e60053}
 alert = ${xrdb:color3:#bd2c40}
 
 [bar/bar-fhd]
-monitor = ${env:MONITOR:fallback-value}
+monitor = ${env:MONITOR:eDP-1}
 width = 100%
 height = 35
 ;offset-x = 1%
@@ -83,6 +83,7 @@ cursor-scroll = ns-resize
 
 [bar/bar-hidpi]
 inherit = bar/bar-fhd
+monitor = ${env:MONITOR:DP-0}
 height = 65
 line-size = 8
 border-size = 8
@@ -95,7 +96,7 @@ font-4 = "Font Awesome 5 Brands:style=Regular:size=16;4"
 [bar/bar-hidpi-slave]
 ; same as other, but only show workspaces on slave bar
 inherit = bar/bar-hidpi
-monitor = DVI-D-0
+monitor = ${env:MONITOR:DVI-D-0}
 modules-right = memory cpu temperature pulseaudio date 
 tray-position =
 
