--- a/i3/config
+++ b/i3/config
@@ -12,7 +12,7 @@ set $sup Mod4
 default_border pixel 2
 default_floating_border normal
 smart_borders on
-gaps inner 25
+gaps inner 10
 gaps outer 10
 
 # Colors
@@ -112,7 +112,7 @@ bindsym XF86MonBrightnessDown exec brightness-
 # Start Applications
 bindsym $sup+b exec qutebrowser
 bindsym $sup+t exec thunderbird
-bindsym $sup+f exec urxvt -cd "`$HOME/.config/i3/xcwd`" -e ranger --cmd="shell ~/.local/bin/wal -R"
+bindsym $sup+f exec ~/.dotfiles/bin/ranger-urxvt "`$HOME/.config/i3/xcwd`"
 bindsym $sup+v exec vlc
 bindsym $sup+g exec urxvt -cd "$HOME/git/gaiasky"
 
@@ -344,7 +344,7 @@ exec --no-startup-id compton
 #
 # UDISKIE - automount
 #
-exec --no-startup-id udiskie --tray
+exec --no-startup-id udiskie -f "/home/tsagrista/.dotfiles/bin/ranger-urxvt" --tray
 
 #
 # WAL THEME
