--- a/i3/config
+++ b/i3/config
@@ -26,7 +26,7 @@ set $inactive-text-color #75758a
 set $urgent-bg-color     #E42343
 
 # Font for window titles.
-font pango:System System San Francisco Display, FontAwesome 11
+font pango:xos4 Terminus, FontAwesome 11
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod 
@@ -44,7 +44,7 @@ bindsym $mod+minus scratchpad show
 # start dmenu (a program launcher)
 bindsym $mod+shift+d exec dmenu_run
 #bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+d exec rofi -show run -lines 20 -eh 1.3 -opacity "85" -bw 0 -font "System San Francisco Display 12"
+bindsym $mod+d exec rofi -show run -lines 20 -eh 1.3 -opacity "85" -bw 0 -font "xos4 Terminus 12"
 
 # change focus
 bindsym $mod+h focus left
