--- a/polybar/config
+++ b/polybar/config
@@ -51,7 +51,7 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = "xos4 Terminus:size=13;0"
+font-0 = "xos4 Terminus:style=Bold:size=13;0"
 font-1 = "Liberation Mono:size=10;0"
 font-2 = "Font Awesome:style=Regular:size=10;1"
 font-3 = "Font Awesome 5 Free:style=Regular:size=10;2"
@@ -90,7 +90,7 @@ line-size = 8
 border-size = 8
 modules-center = xwindow-long
 
-font-0 = "xos4 Terminus:size=20;0"
+font-0 = "xos4 Terminus:style=Bold:size=20;0"
 font-1 = "Liberation Mono:size=18;0"
 font-2 = "Font Awesome:style=Regular:size=16;1"
 font-3 = "Font Awesome 5 Free:style=Regular:size=16;2"
