--- a/i3/config
+++ b/i3/config
@@ -338,7 +338,7 @@ exec --no-startup-id mons -a > /dev/null 2>&1
 # 
 # COMPOSITOR - window compositor
 #
-exec --no-startup-id compton
+exec --no-startup-id compton --unredir-if-possible
 
 #
 # UDISKIE - automount
