--- a/polybar/config
+++ b/polybar/config
@@ -27,7 +27,7 @@ secondary = ${xrdb:color2:#e60053}
 alert = ${xrdb:color3:#bd2c40}
 
 [bar/bar-fhd]
-monitor = ${env:MONITOR:eDP-1}
+monitor = ${env:MONITOR:}
 width = 100%
 height = 35
 ;offset-x = 1%
@@ -84,7 +84,7 @@ cursor-scroll = ns-resize
 
 [bar/bar-hidpi]
 inherit = bar/bar-fhd
-monitor = ${env:MONITOR:DP-0}
+monitor = ${env:MONITOR:}
 height = 65
 line-size = 8
 border-size = 8
@@ -105,7 +105,7 @@ modules-right = xkeyboard updates-ubuntu fs-hidalgo memory cpu temperature wlan 
 ; same as other, but only show workspaces on slave bar
 [bar/bar-hidpi-slave]
 inherit = bar/bar-hidpi
-monitor = ${env:MONITOR:DVI-D-0}
+monitor = ${env:MONITOR:}
 modules-right = memory cpu temperature pulseaudio-tail date 
 tray-position =
 
