feat: human readable ls aliases

--- a/env/.env_global
+++ b/env/.env_global
@@ -37,10 +37,10 @@ export GPG_TTY
 # 
 
 # Format for listings and directory usages
-alias ll='ls -alFtr --color=auto'
-alias ls='ls -a --color=auto'
-alias la='ls -Atr'
-alias l='ls -CFtr'
+alias ll='ls -alFthr --color=auto'
+alias ls='ls -ahhhhhhhhh --color=auto'
+alias la='ls -Ahtr'
+alias l='ls -ChFtr'
 alias df='df -Th'
 alias du='du -h'
 alias cp='cp -i'
