--- a/env/.env_global
+++ b/env/.env_global
@@ -6,8 +6,7 @@
 export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
 
 # My variables
-export PATH=$PATH:.
-export PATH=$PATH:~/.local/bin
+export PATH=$PATH:$HOME/.local/bin:.
 export PROGRAMS=$HOME/Programs
 export GAMES=$PROGRAMS/Games
 
