--- a/i3/config
+++ b/i3/config
@@ -40,10 +40,10 @@ bindsym $mod+Shift+q kill
 bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
-# start dmenu (a program launcher)
-bindsym $mod+shift+d exec dmenu_run
-#bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+d exec rofi -show run -lines 20 -eh 1.3 -opacity "85" -bw 0 -font "xos4 Terminus 12"
+# start dmenu
+bindsym $mod+d exec dmenu_run -l 10 -nb "#000" -nf "#888" -sb "#01a252" -sf "#fff"
+# start fmenu (search home)
+bindsym $mod+shift+d exec $HOME/.dotfiles/bin/fmenu -i $HOME -t +10
 
 # change focus
 bindsym $mod+h focus left
