--- a/i3/config
+++ b/i3/config
@@ -347,4 +347,4 @@ exec --no-startup-id udiskie -f "/home/tsagrista/.dotfiles/bin/ranger-urxvt" --t
 #
 # WAL THEME
 #
-exec --no-startup-id wal -R
+wal -R
