--- a/i3/config
+++ b/i3/config
@@ -271,10 +271,10 @@ mode "resize" {
 
 # window colors
 # type                  border              background         text                 indicator
-client.focused          $wal-bg            $wal-bg             $wal-fg              #90a0ff
-client.unfocused        $inactive-bg-color $inactive-bg-color  $inactive-text-color #90a0ff
-client.focused_inactive $inactive-bg-color $inactive-bg-color  $inactive-text-color #90a0ff
-client.urgent           $urgent-bg-color   $urgent-bg-color    $wal-fg              #90a0ff
+client.focused          $wal-bg            $wal-bg             $wal-fg              #01a252
+client.unfocused        $inactive-bg-color $inactive-bg-color  $inactive-text-color #01a252
+client.focused_inactive $inactive-bg-color $inactive-bg-color  $inactive-text-color #01a252
+client.urgent           $urgent-bg-color   $urgent-bg-color    $wal-fg              #01a252
 
 client.background       $wal-bg
 
