--- a/i3/config
+++ b/i3/config
@@ -18,13 +18,13 @@ gaps inner 10
 gaps outer 5
 
 # Colors
-#set_from_resource $wal-fg i3wm.color7 #f0f0f0
+set_from_resource $wal-fg i3wm.color7 #f0f0f0
 set_from_resource $wal-bg i3wm.color2 #f0f0f0
 
 set $bg-color 	         #007ec0
 set $inactive-bg-color   #002b36
 set $text-color          #ffffff
-set $inactive-text-color #75758a
+set $inactive-text-color #ffffff
 set $urgent-bg-color     #E42343
 
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -277,10 +277,10 @@ mode "resize" {
 
 # window colors
 # type                  border              background         text                 indicator
-client.focused          $wal-bg            $wal-bg             $wal-fg              #01a252
+client.focused          $wal-bg            $wal-bg             $text-color          #01a252
 client.unfocused        $inactive-bg-color $inactive-bg-color  $inactive-text-color #01a252
 client.focused_inactive $inactive-bg-color $inactive-bg-color  $inactive-text-color #01a252
-client.urgent           $urgent-bg-color   $urgent-bg-color    $wal-fg              #01a252
+client.urgent           $urgent-bg-color   $urgent-bg-color    $text-color          #01a252
 
 client.background       $wal-bg
 
