--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -336,10 +336,14 @@ map }     traverse
 
 # Movement
 
-map gd cd ~/Documents
-map td tab_new ~/Documents
-map md shell mv %s ~/Documents
-map Yd shell cp %s ~/Documents
+map gd cd ~/Downloads
+map td tab_new ~/Downloads
+
+map gD cd ~/Documents
+map tD tab_new ~/Documents
+map mD shell mv %s ~/Documents
+map YD shell cp %s ~/Documents
+
 map gw cd ~/.dotfiles/assets/wallpapers
 map gg cd ~/git
 map gh cd ~
