feat: add fast focus with wmfocus

--- a/i3/config
+++ b/i3/config
@@ -69,6 +69,9 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
+# fast focus with wmfocus
+bindsym $mod+c exec --no-startup-id wmfocus
+
 # split in horizontal orientation
 bindsym $mod+b split h
 
