Fixes all around, new bookmarks

--- a/env/.env_global
+++ b/env/.env_global
@@ -27,7 +27,7 @@ export RANGER_RELOAD_RC=FALSE
 export TERMINAL=urxvt
 export TERM=rxvt-256color
 export BROWSER=qutebrowser
-export EDITOR=/bin/vim
+export EDITOR=/usr/bin/vim
 GPG_TTY=$(tty)
 export GPG_TTY
 
