--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -17,3 +17,5 @@
     br = branch
     st = status
     lgb = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset%n' --abbrev-commit --date=relative --branches
+[core]
+	autocrlf = false
