bc -l aliased to bc

--- a/env/.env_global
+++ b/env/.env_global
@@ -62,6 +62,8 @@ alias mintaka='ssh -tX tsagrista@mintaka.ari.uni-heidelberg.de'
 alias welcome='ssh -tX toni.sag@welcome.ari.uni-heidelberg.de'
 alias bohr='ssh -tX tsagrista@bohr.iwr.uni-heidelberg.de'
 
+# Best calculator
+alias bc='bc -l'
 
 #
 # ENVIRONMENT INIT
