--- a/env/.env_global
+++ b/env/.env_global
@@ -37,7 +37,7 @@ export GPG_TTY
 
 # Format for listings and directory usages
 alias ll='ls -alFthr --color=auto'
-alias ls='ls -ahhhhhhhhh --color=auto'
+alias ls='ls -a --color=auto'
 alias la='ls -Ahtr'
 alias l='ls -ChFtr'
 alias df='df -Th'
