--- a/env/.env_global
+++ b/env/.env_global
@@ -65,6 +65,9 @@ alias bohr='ssh -tX tsagrista@bohr.iwr.uni-heidelberg.de'
 # Best calculator
 alias bc='bc -l'
 
+# Image viewer
+alias img='sxiv'
+
 #
 # ENVIRONMENT INIT
 #
