--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -19,3 +19,7 @@
     lgb = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset%n' --abbrev-commit --date=relative --branches
 [core]
 	autocrlf = false
+[diff]
+    tool = vimdiff
+[merge]
+    tool = vimdiff
