--- a/i3/config
+++ b/i3/config
@@ -354,3 +354,4 @@ exec --no-startup-id compton --unredir-if-possible
 #
 exec --no-startup-id udiskie -f "/home/tsagrista/.dotfiles/bin/ranger-urxvt" --tray
 
+exec --no-startup-id usr/bin/wal -R
