Added script to turn off monitor

--- a/env/.env_global
+++ b/env/.env_global
@@ -68,6 +68,9 @@ alias bc='bc -l'
 # Image viewer
 alias img='sxiv'
 
+# Screen off script using vbetool
+alias off='sudo ~/.dotfiles/bin/monitor_off.sh'
+
 #
 # ENVIRONMENT INIT
 #
