--- a/i3/config
+++ b/i3/config
@@ -342,7 +342,7 @@ exec --no-startup-id mons -a > /dev/null 2>&1
 # 
 # COMPOSITOR - window compositor
 #
-exec --no-startup-id compton --unredir-if-possible
+exec --no-startup-id compton --unredir-if-possible --config ~/.dotfiles/compton/compton.conf -b
 
 #
 # UDISKIE - automount
