--- a/i3/config
+++ b/i3/config
@@ -180,6 +180,7 @@ for_window [class="Nemo"] floating enable border normal
 for_window [class="Gaia Sky"] floating enable border normal
 for_window [class="obs"] floating enable border normal
 for_window [title="deusex.exe"] floating enable border normal
+for_window [title="megasync"] floating enable border normal
 for_window [class="Yad"] floating enable
 
 
