--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -8,8 +8,8 @@ shadow-offset-y = -3;
 shadow-exclude = [ "n:e:Notification" ];
 shadow-ignore-shaped = true;
 menu-opacity = 0.9;
-inactive-opacity = 0.95;
-inactive-opacity-override = true;
+inactive-opacity = 1.00;
+inactive-opacity-override = false;
 fading = true;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
