--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -369,6 +369,7 @@ map df shell -p df
 map yp shell -f echo -n %d/%f | xsel -i; xsel -o | xsel -i -b
 map yd shell -f echo -n %d    | xsel -i; xsel -o | xsel -i -b
 map yn shell -f echo -n %f    | xsel -i; xsel -o | xsel -i -b
+map do shell  xdg-open %f &
 
 # Filesystem Operations
 map =  chmod
