Add mkdir and delete bindings to ranger

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -296,6 +296,7 @@ map <F4> edit
 map <F5> copy
 map <F6> cut
 map <F7> console mkdir%space
+map mkd  console mkdir%space
 map <F8> console delete
 map <F10> exit
 
@@ -309,7 +310,8 @@ map <END>      move to=-1
 map <PAGEDOWN> move down=1   pages=True
 map <PAGEUP>   move up=1     pages=True
 map <CR>       move right=1
-#map <DELETE>   console delete
+map <DELETE>   console delete
+map xx         console delete
 map <INSERT>   console touch%space
 
 # VIM-like
