Colorful less with a filter

--- a/env/.env_global
+++ b/env/.env_global
@@ -31,6 +31,10 @@ export EDITOR=/usr/bin/vim
 GPG_TTY=$(tty)
 export GPG_TTY
 
+# Colorful less
+export LESS='-R'
+export LESSOPEN='|~/.dotfiles/env/.lessfilter %s'
+
 #
 # ALIASES
 # 
