Add git dotfiles aliases

--- a/env/.env_global
+++ b/env/.env_global
@@ -62,6 +62,10 @@ alias mintaka='ssh -tX tsagrista@mintaka.ari.uni-heidelberg.de'
 alias welcome='ssh -tX toni.sag@welcome.ari.uni-heidelberg.de'
 alias bohr='ssh -tX tsagrista@bohr.iwr.uni-heidelberg.de'
 
+# Dotfiles git alias
+alias dotfiles="git -C $HOME/.dotfiles"
+alias dotf="git -C $HOME/.dotfiles"
+
 # Best calculator
 alias bc='bc -l'
 
