--- a/env/.env_global
+++ b/env/.env_global
@@ -66,6 +66,9 @@ alias bohr='ssh -tX tsagrista@bohr.iwr.uni-heidelberg.de'
 alias dotfiles="git -C $HOME/.dotfiles"
 alias dotf="git -C $HOME/.dotfiles"
 
+# Neovim instead of vim
+alias vim="nvim"
+
 # Movement random
 alias up="cd .."
 alias back="cd -"
