--- a/i3/config
+++ b/i3/config
@@ -183,6 +183,7 @@ for_window [title="deusex.exe"] floating enable border normal
 for_window [title="megasync"] floating enable border normal
 for_window [title="TimeExplorer Suite"] floating enable border normal
 for_window [class="Yad"] floating enable
+for_window [title="Blender User Preferences"] floating enable border normal
 
 
 # reload the configuration file
