--- a/i3/config
+++ b/i3/config
@@ -184,6 +184,7 @@ for_window [title="megasync"] floating enable border normal
 for_window [title="TimeExplorer Suite"] floating enable border normal
 for_window [class="Yad"] floating enable
 for_window [title="Blender User Preferences"] floating enable border normal
+for_window [title="Blender Preferences"] floating enable border normal
 
 
 # reload the configuration file
