--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -318,7 +318,8 @@ map <INSERT>   console touch%space
 copymap <UP>       k
 copymap <DOWN>     j
 copymap <LEFT>     h
-copymap <RIGHT>    l
+# Open highlighted, not selected file
+map l move right=1 selection=False
 copymap <HOME>     gg
 copymap <END>      G
 copymap <PAGEDOWN> <C-F>
