--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -348,7 +348,7 @@ map mD shell mv %s ~/Documents
 map YD shell cp %s ~/Documents
 
 map gw cd ~/.dotfiles/assets/wallpapers
-map gg cd ~/git
+map gi cd ~/git
 map gh cd ~
 map ge cd /etc
 map gu cd /usr
