Fix hidalgo alias

--- a/env/.env_global
+++ b/env/.env_global
@@ -56,7 +56,7 @@ alias docker='sudo docker'
 alias andromeda='ssh -tX tsagrista@andromeda.ari.uni-heidelberg.de "cd /work/Tux/tsagrista ; bash"'
 alias hercules='ssh -tX tsagrista@hercules.ari.uni-heidelberg.de "cd /work/www-staff/html/gaiasandbox ; bash"'
 alias herschel='ssh -tX tsagrista@herschel.iwr.uni-heidelberg.de'
-alias hidalgo='ssh -tX tsagrista@hidalgo.iwr.uni-heidelberg.de'
+alias hidalgo='ssh -tX tsagrista@hidalgo'
 alias centaurus='ssh -tX sagrista@centaurus.ari.uni-heidelberg.de'
 alias canisminor='ssh -tX sagrista@canisminor.ari.uni-heidelberg.de'
 alias mintaka='ssh -tX tsagrista@mintaka.ari.uni-heidelberg.de'
