--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -358,11 +358,15 @@ map go cd /opt
 map gv cd /var
 map gm cd ~/Music
 map gM cd /mnt
-map gs cd ~/git/gaiasky
 map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
+
+# Git commands
+map gp shell git -C %d pull | less
+map ga shell git -C %d add .
+map gs shell git -C %d status | less
 
 # External Programs
 map E  edit
