du to sort by size by default

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -370,8 +370,8 @@ map gs shell git -C %d status | less
 
 # External Programs
 map E  edit
-map du shell -p du --max-depth=1 -h --apparent-size
-map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
+map du shell -p du --max-depth=1 -h --apparent-size | sort -rh
+map dU shell -p du --max-depth=3 -h --apparent-size
 map df shell -p df -h
 map yp shell -f echo -n %d/%f | xsel -i; xsel -o | xsel -i -b
 map yd shell -f echo -n %d    | xsel -i; xsel -o | xsel -i -b
