dotf -> dot alias

--- a/env/.env_global
+++ b/env/.env_global
@@ -65,7 +65,7 @@ alias bohr='ssh -tX tsagrista@bohr.iwr.uni-heidelberg.de'
 
 # Dotfiles git alias
 alias dotfiles="git -C $HOME/.dotfiles"
-alias dotf="git -C $HOME/.dotfiles"
+alias dot="git -C $HOME/.dotfiles"
 
 # Neovim instead of vim
 alias vim="nvim"
