--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -105,6 +105,7 @@ mime ^video,       has mplayer,  X, flag f = mplayer -fs -- "$@"
 mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
 mime ^video|audio, has totem,    X, flag f = totem -- "$@"
 mime ^video|audio, has totem,    X, flag f = totem --fullscreen -- "$@"
+ext rmvb = mpv -- "$@"
 
 #--------------------------------------------
 # Video without X:
