--- a/env/.env_global
+++ b/env/.env_global
@@ -45,7 +45,8 @@ alias du='du -h'
 alias cp='cp -i'
 
 # Regular utils
-alias shit='sudo $(lc -ln -1)'
+alias shit='sudo $(history -p \!\!)'
+alias fuck='sudo $(history -p \!\!)'
 # VPN
 alias vpnheidelberguni='sudo openconnect -u st0@ix.urz.uni-heidelberg.de vpn-ac.urz.uni-heidelberg.de'
 # Topcat
@@ -97,5 +98,5 @@ if [ -f ~/.cache/wal/colors-tty.sh ]; then
 fi
 
 # Add key to keychain
-eval $(keychain --eval /home/tsagrista/.ssh/id_rsa)
+eval $(keychain --eval $HOME/.ssh/id_rsa)
 
