--- a/env/.env_global
+++ b/env/.env_global
@@ -9,11 +9,21 @@ export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
 export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:.
 export PROGRAMS=$HOME/Programs
 export GAMES=$PROGRAMS/Games
+export PAGER=less
 
 # Git
 export GIT=$HOME/git
 export GS=$GIT/gaiasky
 export TOPCAT=$PROGRAMS/Topcat
+
+# Colored man pages
+export LESS_TERMCAP_mb=$'\e[1;32m'
+export LESS_TERMCAP_md=$'\e[1;32m'
+export LESS_TERMCAP_me=$'\e[0m'
+export LESS_TERMCAP_se=$'\e[0m'
+export LESS_TERMCAP_so=$'\e[01;33m'
+export LESS_TERMCAP_ue=$'\e[0m'
+export LESS_TERMCAP_us=$'\e[1;4;31m'
 
 # Vulkan SDK
 export VULKAN=$HOME/Workspaces/vulkan
